feat: Implement Phase 2 - Load Balancer
This commit completes Phase 2 of the Helios project:

- Update configuration to support multiple backend servers
- Implement load balancer module with round-robin strategy
- Refactor proxy logic to use load balancing
- Update backend server to support server identification
- Add helper scripts for testing load balancing
- Update documentation with new features and configuration

--- a/helios.yaml
+++ b/helios.yaml
@@ -1,5 +1,13 @@
 server:
   port: 8080
 
-backend:
-  address: "http://localhost:8081"
+backends:
+  - name: "server1"
+    address: "http://localhost:8081"
+  - name: "server2"
+    address: "http://localhost:8082"
+  - name: "server3"
+    address: "http://localhost:8083"
+
+load_balancer:
+  strategy: "round_robin"  # Strategi load balancing (round_robin, least_connections, dll)
