--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,18 +11,19 @@ jobs:
     name: Build and Test
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false  # Don't fail all jobs if one fails
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         go: ['1.18', '1.19', '1.20']
     
     steps:
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4  # Updated to v4
       with:
         go-version: ${{ matrix.go }}
       
     - name: Check out code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Updated to v3
       
     - name: Get dependencies
       run: go mod download
@@ -31,13 +32,15 @@ jobs:
       run: go build -v ./...
       
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./... -short  # Added -short flag to skip long-running tests
       
     - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v2
+      uses: golangci/golangci-lint-action@v3  # Updated to v3
       with:
         version: latest
         args: --timeout=5m
+        skip-pkg-cache: true
+        skip-build-cache: true
       
   coverage:
     name: Code Coverage
@@ -45,21 +48,21 @@ jobs:
     
     steps:
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4  # Updated to v4
       with:
         go-version: '1.20'
       
     - name: Check out code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Updated to v3
       
     - name: Get dependencies
       run: go mod download
       
     - name: Generate coverage report
-      run: go test -coverprofile=coverage.txt -covermode=atomic ./...
+      run: go test -coverprofile=coverage.txt -covermode=atomic ./... -short  # Added -short flag
       
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3  # Updated to v3
       with:
         file: ./coverage.txt
         fail_ci_if_error: false
@@ -69,13 +72,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, coverage]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write  # Needed for creating releases
     
     steps:
     - name: Check out code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Updated to v3
       
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4  # Updated to v4
       with:
         go-version: '1.20'
         
@@ -89,43 +94,12 @@ jobs:
         GOOS=windows GOARCH=amd64 go build -o dist/helios-windows-amd64.exe ./cmd/helios
         GOOS=darwin GOARCH=amd64 go build -o dist/helios-darwin-amd64 ./cmd/helios
         
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Release
+      uses: softprops/action-gh-release@v1  # Using a more modern release action
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        files: |
+          dist/helios-linux-amd64
+          dist/helios-windows-amd64.exe
+          dist/helios-darwin-amd64
         draft: false
         prerelease: false
-        
-    - name: Upload Linux Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/helios-linux-amd64
-        asset_name: helios-linux-amd64
-        asset_content_type: application/octet-stream
-        
-    - name: Upload Windows Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/helios-windows-amd64.exe
-        asset_name: helios-windows-amd64.exe
-        asset_content_type: application/octet-stream
-        
-    - name: Upload macOS Binary
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/helios-darwin-amd64
-        asset_name: helios-darwin-amd64
-        asset_content_type: application/octet-stream
