refactor: adopt structured logging with request tracing

--- a/helios.yaml
+++ b/helios.yaml
@@ -53,6 +53,17 @@ metrics:
   port: 9090              # Port for metrics server
   path: "/metrics"        # Path for metrics endpoint
 
+logging:
+  level: "info"
+  format: "text"
+  include_caller: false
+  request_id:
+    enabled: true
+    header: "X-Request-ID"
+  trace:
+    enabled: true
+    header: "X-Trace-ID"
+
 plugins:
   enabled: true
   chain:
