Add Dockerfile and Compose setup for Helios with 3 backend services and config mount

--- a/helios.yaml
+++ b/helios.yaml
@@ -7,41 +7,41 @@ server:
 
 backends:
   - name: "server1"
-    address: "http://localhost:8081"
+    address: "http://backend1:80"
     weight: 5
   - name: "server2"
-    address: "http://localhost:8082"
+    address: "http://backend2:80"
     weight: 2
   - name: "server3"
-    address: "http://localhost:8083"
+    address: "http://backend3:80"
     weight: 1
 
 load_balancer:
-  strategy: "ip_hash"  # Options: "round_robin", "least_connections", "weighted_round_robin", "ip_hash"
-  
+  strategy: "ip_hash" # Options: "round_robin", "least_connections", "weighted_round_robin", "ip_hash"
+
 health_checks:
   active:
     enabled: true
-    interval: 10  # Interval in seconds
-    timeout: 7    # Timeout in seconds
+    interval: 10 # Interval in seconds
+    timeout: 7 # Timeout in seconds
     path: "/"
   passive:
     enabled: true
-    unhealthy_threshold: 3  # Number of failures before marking as unhealthy
-    unhealthy_timeout: 30   # Time in seconds to keep backend unhealthy
+    unhealthy_threshold: 3 # Number of failures before marking as unhealthy
+    unhealthy_timeout: 30 # Time in seconds to keep backend unhealthy
 
 rate_limit:
   enabled: true
-  max_tokens: 100          # Maximum tokens in bucket
-  refill_rate_seconds: 1   # Refill rate in seconds
+  max_tokens: 100 # Maximum tokens in bucket
+  refill_rate_seconds: 1 # Refill rate in seconds
 
 circuit_breaker:
   enabled: true
-  max_requests: 5          # Max requests in half-open state
-  interval_seconds: 60     # Time window for failure counting
-  timeout_seconds: 60      # Time to wait before moving from open to half-open
-  failure_threshold: 5     # Number of failures to open circuit
-  success_threshold: 2     # Number of successes to close circuit
+  max_requests: 5 # Max requests in half-open state
+  interval_seconds: 60 # Time window for failure counting
+  timeout_seconds: 60 # Time to wait before moving from open to half-open
+  failure_threshold: 5 # Number of failures to open circuit
+  success_threshold: 2 # Number of successes to close circuit
 
 admin_api:
   enabled: true
@@ -50,8 +50,8 @@ admin_api:
 
 metrics:
   enabled: true
-  port: 9090              # Port for metrics server
-  path: "/metrics"        # Path for metrics endpoint
+  port: 9090 # Port for metrics server
+  path: "/metrics" # Path for metrics endpoint
 
 logging:
   level: "info"
@@ -70,8 +70,8 @@ plugins:
     - name: logging
     - name: size_limit
       config:
-        max_request_body: 10485760   # 10MB in bytes
-        max_response_body: 52428800  # 50MB in bytes
+        max_request_body: 10485760 # 10MB in bytes
+        max_response_body: 52428800 # 50MB in bytes
     - name: headers
       config:
         set:
