--- a/helios.docker.yaml
+++ b/helios.docker.yaml
@@ -1,4 +1,4 @@
-server:
+﻿server:
   port: 8080
   tls:
     enabled: false
@@ -7,13 +7,13 @@ server:
 
 backends:
   - name: "server1"
-    address: "http://localhost:8081"
+    address: "http://backend1:80"
     weight: 5
   - name: "server2"
-    address: "http://localhost:8082"
+    address: "http://backend2:80"
     weight: 2
   - name: "server3"
-    address: "http://localhost:8083"
+    address: "http://backend3:80"
     weight: 1
 
 load_balancer:
