Add comprehensive configuration documentation
- Add gzip compression plugin to all config files
- Add detailed comments for all configuration sections
- Add TLS/SSL certificate generation documentation
- Add security warning for test certificates
- Create certs/README.md with certificate best practices
- Update README with complete configuration examples

--- a/helios.yaml
+++ b/helios.yaml
@@ -1,9 +1,9 @@
 server:
-  port: 8080
+  port: 8080 # Port for the proxy server
   tls:
-    enabled: false
-    certFile: "certs/cert.pem"
-    keyFile: "certs/key.pem"
+    enabled: false # Enable TLS/SSL termination
+    certFile: "certs/cert.pem" # Path to TLS certificate file
+    keyFile: "certs/key.pem" # Path to TLS private key file
 
 backends:
   - name: "server1"
@@ -45,8 +45,8 @@ circuit_breaker:
 
 admin_api:
   enabled: true
-  port: 9091
-  auth_token: "change-me"
+  port: 9091 # Port for admin API server
+  auth_token: "change-me" # JWT token for authentication (change in production)
 
 metrics:
   enabled: true
@@ -54,15 +54,15 @@ metrics:
   path: "/metrics" # Path for metrics endpoint
 
 logging:
-  level: "info"
-  format: "text"
-  include_caller: false
+  level: "info" # Log level: debug, info, warn, error
+  format: "text" # Log format: text (console) or json (machine-readable)
+  include_caller: false # Include file and line number in logs
   request_id:
-    enabled: true
-    header: "X-Request-ID"
+    enabled: true # Auto-generate and propagate request IDs
+    header: "X-Request-ID" # Header name for request ID
   trace:
-    enabled: true
-    header: "X-Trace-ID"
+    enabled: true # Enable distributed tracing
+    header: "X-Trace-ID" # Header name for trace ID
 
 plugins:
   enabled: true
@@ -72,6 +72,17 @@ plugins:
       config:
         max_request_body: 10485760 # 10MB in bytes
         max_response_body: 52428800 # 50MB in bytes
+    - name: gzip
+      config:
+        level: 5 # Compression level (1-9, default: 5)
+        min_size: 1024 # Minimum response size to compress (bytes, default: 1024)
+        content_types:
+          - "text/html"
+          - "text/css"
+          - "text/plain"
+          - "application/json"
+          - "application/javascript"
+          - "application/xml"
     - name: headers
       config:
         set:
