feat(config): add comprehensive timeout configuration
LEETCODE-STYLE HTTP TIMEOUT OPTIMIZATION based on research:

Server-side timeouts (http.Server):
- ReadTimeout: 15s default (protect against slow-read attacks)
- WriteTimeout: 15s default (prevent slow writes)
- IdleTimeout: 60s default (keep-alive connection timeout)
- Handler: 30s (end-to-end request processing)
- Shutdown: 30s (graceful shutdown timeout)

Backend/Transport timeouts (http.Transport):
- DialTimeout: 10s (connection establishment)
- ResponseHeaderTimeout: 30s (backend response)
- IdleConnTimeout: 90s (reuse backend connections)
- TLSHandshakeTimeout: 10s

Connection pooling optimization:
- MaxIdleConns: 100 (prevent connection exhaustion)
- MaxIdleConnsPerHost: 10 (per-backend pooling)
- MaxConnsPerHost: 100 (limit concurrent connections)
- ForceAttemptHTTP2: true (use HTTP/2 when available)

Features:
- Smart defaults (zero values use production-ready defaults)
- All timeouts configurable via YAML
- Graceful shutdown with context propagation
- Signal handling (SIGINT, SIGTERM)
- Connection reuse and pooling
- Protection against slow clients and backends

Research-backed defaults from:
- Cloudflare net/http timeout guide
- HAProxy timeout tuning
- Go stdlib http.Transport best practices

Comprehensive test coverage (10 scenarios):
- All valid timeouts
- Zero values (use defaults)
- Negative value validation for each timeout field

Resolves Task #12: Add Request Timeout Configuration

--- a/helios.yaml
+++ b/helios.yaml
@@ -4,6 +4,15 @@ server:
     enabled: false # Enable TLS/SSL termination
     certFile: "certs/cert.pem" # Path to TLS certificate file
     keyFile: "certs/key.pem" # Path to TLS private key file
+  timeouts:
+    read: 15 # ReadTimeout in seconds (protects against slow-read attacks)
+    write: 15 # WriteTimeout in seconds (prevents slow writes)
+    idle: 60 # IdleTimeout in seconds (keep-alive timeout)
+    handler: 30 # Handler timeout in seconds (end-to-end request timeout)
+    shutdown: 30 # Graceful shutdown timeout in seconds
+    backend_dial: 10 # Backend connection dial timeout in seconds
+    backend_read: 30 # Backend response read timeout in seconds
+    backend_idle: 90 # Backend idle connection timeout in seconds
 
 backends:
   - name: "server1"
