ci: trigger Dependabot by updating config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -58,3 +58,7 @@ updates:
     commit-message:
       prefix: "ci"
       include: "scope"
+
+# Note: Schedule changed to daily for testing
+# Will revert to weekly after Dependabot verification
+
