feat: Add Jump Consistent Hash (ip_hash_consistent) as 5th strategy
New Features:
- Implement Jump Consistent Hash algorithm (Google 2014)
- 5th load balancing strategy: ip_hash_consistent
- Minimal remapping on scale: 13% vs 91% (7x better)
- Ideal for stateful apps with auto-scaling (K8s, AWS)

Performance:
- Hot path: 18.59 ns/op (50% slower than ip_hash)
- Remapping: 13.20% vs 91.01% when scaling 10->11 backends
- Session preservation: 86.8% vs 8.99%
- Distribution: ±40% variance (trade-off for consistency)

Changes:
- Add ip_hash_consistent.go with Jump Hash implementation
- Update config validation to accept ip_hash_consistent
- Update loadbalancer.go strategy factory
- Fix websocket_pool config in helios.yaml (enabled: true)
- Fix websocket_pool config in helios.docker.yaml (enabled: true)
- Update README.md with strategy comparison and websocket pool
- Add binary exclusions to .gitignore (helios, backend)

Documentation:
- Clear trade-off comments in YAML configs
- Updated README architecture diagram
- Updated feature list with new strategy

Use Cases:
- ip_hash: Stateless apps, perfect distribution
- ip_hash_consistent: Stateful apps, session preservation

Paper: https://arxiv.org/abs/1406.2294
Analysis: First optimization from 40+ LeetCode/2025 patterns

--- a/helios.docker.yaml
+++ b/helios.docker.yaml
@@ -26,7 +26,14 @@ backends:
     weight: 1
 
 load_balancer:
-  strategy: "ip_hash" # Options: "round_robin", "least_connections", "weighted_round_robin", "ip_hash"
+  strategy: "ip_hash" # Options: "round_robin", "least_connections", "weighted_round_robin", "ip_hash", "ip_hash_consistent"
+  # ip_hash: Fast, perfect distribution, but 90% remapping on scale (breaks sessions)
+  # ip_hash_consistent: Jump Hash - 50% slower, minimal remapping (13%), good for stateful apps
+  websocket_pool:
+    enabled: true # Enable WebSocket connection pooling
+    max_idle: 10 # Maximum idle connections per backend
+    max_active: 100 # Maximum active connections per backend (0 = unlimited)
+    idle_timeout_seconds: 300 # Idle connection timeout (5 minutes)
 
 health_checks:
   active:
