--- a/benchmark/nginx.conf
+++ b/benchmark/nginx.conf
@@ -1,34 +1,40 @@
-# Minimal Nginx config for fair benchmark against Helios
-
 worker_processes auto;
-error_log /dev/null crit;  # Minimal logging
+error_log /dev/null crit;
 
 events {
-    worker_connections 1024;
+    worker_connections 4096;
     use epoll;
+    multi_accept on;
 }
 
 http {
-    access_log off;  # Disable access logs for performance
-    
+    access_log off;
+
     upstream backend {
         server localhost:9001;
         server localhost:9002;
         server localhost:9003;
+        keepalive 100;
     }
 
     server {
         listen 8081;
-        
+
         location / {
             proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
-            
-            # Timeouts similar to Helios
+            proxy_set_header Proxy-Connection "";
+            proxy_set_header Keep-Alive "";
+            proxy_set_header Host $host;
+
             proxy_connect_timeout 10s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
+
+            keepalive_timeout 60s;
+            keepalive_requests 1000;
+            lingering_close off;
         }
     }
 }
