feat: Add IP allow/deny list for Admin API security (#28)
Implement IP-based access control for the Admin API to enhance security.

Features:
- IP filtering middleware with CIDR notation support
- Support for both allow list (whitelist) and deny list (blacklist)
- Deny list takes precedence over allow list
- Support for single IPs and CIDR ranges (IPv4/IPv6)
- HTTP 403 (Forbidden) response for blocked IPs
- Comprehensive logging for blocked access attempts

Implementation:
- Added IPFilter struct with allow/deny list support
- Integrated IP filter middleware into Admin API
- Updated config to support ip_allow_list and ip_deny_list
- Added parseCIDR helper for flexible IP/CIDR parsing

Tests:
- Unit tests for IP filter logic (100% coverage)
- Integration tests with Admin API
- Test cases for allow/deny precedence
- IPv4/IPv6 support validation
- Overall 78% test coverage for adminapi package

Documentation:
- Updated README with IP filtering examples
- Created comprehensive security guide (docs/admin-api-security.md)
- Added example configurations in helios.yaml and helios.docker.yaml
- Documented common use cases and troubleshooting

Closes #28

--- a/helios.docker.yaml
+++ b/helios.docker.yaml
@@ -63,6 +63,13 @@ admin_api:
   enabled: true
   port: 9091 # Port for admin API server
   auth_token: "change-me" # JWT token for authentication (change in production)
+  # IP-based access control (optional)
+  # ip_allow_list:
+  #   - "127.0.0.1"           # Allow localhost
+  #   - "192.168.1.0/24"      # Allow local network
+  #   - "10.0.0.0/8"          # Allow private network
+  # ip_deny_list:
+  #   - "203.0.113.0/24"      # Block specific subnet
 
 metrics:
   enabled: true
